[package]
name = "solver"
version = "0.2.7"
authors = ["Wataru Inariba"]
edition = "2021"
license = "AGPL-3.0-or-later"

[lib]
crate-type = ["cdylib"]
path = "../solver-src/lib.rs"

[dependencies]
js-sys = "0.3.77"
once_cell = "1.20.3"
postflop-solver = { git = "https://github.com/b-inary/postflop-solver", features = [
    "custom-alloc",
], default-features = false }
spmc = "0.3.0"
rayon = { version = "1.10.0", optional = true }
wasm-bindgen = "0.2.100"

[features]
default = ["rayon"]

[profile.release]
codegen-units = 1
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4"]
